--- a/utils/config.yml
+++ b/utils/config.yml
@@ -2,20 +2,14 @@ vu:
   data_1cho_starting_cohorts_file_path: "data/00_raw/2022/2023-09-19-15-32-12_ODW204 - VUanalytics EOI Cohorten.zip"
   data_1cho_enrollments_file_path: "data/00_raw/2022/2023-03-21-16-43-54_ODW205 - VUanalytics 1CHO Inschrijving.zip"
   metadata_1cho_decoding_files_dir: "data/00_raw/2022/decoding_files/"
-  #dataset_combi_geaggregeerd: "data_model/Opleiding_cohort_EOI.rds"
-  dataset_combi_geaggregeerd: "data_model/AS_CBS_VU_aggr.rds"
-  dataset_instelling_individueel: "data_model/Export_Student_Analytics_2023-02-14_NCO_HO_hashed.rds"
-  dataset_CHO_doorstroom: "data_model/Geslaagden_Cohorten_VSNU.rds"
-  dataset_CHO_doorstroom_gantt: "data_model/Geslaagden_Cohorten_VSNU_geselecteerd.rds"
-  driver: "SQL Server"
+  metadata_institution_name: "VU"
+  metadata_institution_BRIN: "21PL"
+  fix_duplicated_enrollments: TRUE
+  filter_only_own_students: TRUE
+  filter_only_gov_funded_programmes: TRUE
 
 synthetic:
-  inherits: instellingsdata
-  dataset_combi_geaggregeerd: "data_model/AS_CBS_VU_aggr_synthetisch.rds"
-  dataset_instelling_individueel: "data_model/Inschrijvingen_instelling_synthetisch.rds"
-  dataset_CHO_doorstroom: "data_model/Geslaagden_Cohorten_VSNU_synthetisch.rds"
-  dataset_CHO_doorstroom_gantt: "data_model/Geslaagden_Cohorten_VSNU_gantt_synthetisch.rds"
-  driver: "SQLServer"
+  inherits: vu
 
 default:
-  inherits: vu
+  inherits: synthetic
