--- a/config.yml
+++ b/config.yml
@@ -21,6 +21,10 @@ vu:
 
 synthetic:
   inherits: vu
+  data_1cho_starting_cohorts_rel_file_path: "CEDA_Cohorten_synthetic.zip"
+  data_1cho_enrollments_rel_file_path: "CEDA_1CHO_synthetic.zip"
+  data_1cho_starting_cohorts_file_path: !expr file.path("data/00_raw", year, data_1cho_starting_cohorts_rel_file_path)
+  data_1cho_enrollments_file_path: !expr file.path("data/00_raw", year, data_1cho_enrollments_rel_file_path)
 
 default:
   inherits: synthetic
