fix: update config for the new input and code

--- a/config.yml
+++ b/config.yml
@@ -1,36 +1,48 @@
 
 default:
-  year: 2022
-  first_year: 2010 # This cannot be lower than 2002 for Cohort files
+
+  # The following settings are general settings that determine which data sources are used
+  # Change them for your own data / institution
+  year: 2023
+  first_year: 2002 # This cannot be lower than 2002 for Cohort files
 
   metadata_1cho_decoding_files_dir: "data/00_raw/2022/decoding_files/"
 
   metadata_institution_name: "synthetic"
-  metadata_institution_save_name: metadata_institution_name
   metadata_institution_BRIN: "21XX"
 
-  data_1cho_starting_cohorts_rel_file_path: "CEDA_Cohorten_synthetic.zip"
-  data_1cho_enrollments_rel_file_path: "CEDA_1CHO_synthetic.zip"
-  data_1cho_starting_cohorts_file_path: !expr file.path("data/00_raw", year, data_1cho_starting_cohorts_rel_file_path)
-  data_1cho_enrollments_file_path: !expr file.path("data/00_raw", year, data_1cho_enrollments_rel_file_path)
+  data_1cho_enrollments_file_name: "EV299XX24.csv"
+  data_1cho_enrollments_file_path: !expr file.path("data/00_raw", year, data_1cho_enrollments_file_name)
+
+  # For now removed
+
+  # data_1cho_starting_cohorts_rel_file_path: "CEDA_Cohorten_synthetic.zip"
+  # data_1cho_starting_cohorts_file_path: !expr file.path("data/00_raw", year, data_1cho_starting_cohorts_rel_file_path)
 
   # The following settings influence what data manipulations are taken.
-  fix_duplicated_enrollments: TRUE # At the VU sometimes a student has multiple enrollments in one year. This setting combines those enrollments
-  filter_only_own_students: TRUE
-  filter_only_gov_funded_programmes: TRUE
+  # fix_duplicated_enrollments: FALSE
+  # filter_only_own_students: FALSE
+  # filter_only_gov_funded_programmes: FALSE
+
   # Add additional manipulation configs to this vector
-  data_manipulation_config: !expr c(fix_duplicated_enrollments, filter_only_own_students, filter_only_gov_funded_programmes)
+  # data_manipulation_config: !expr c(fix_duplicated_enrollments, filter_only_own_students, filter_only_gov_funded_programmes)
 
 
 vu:
-  # The following settings are general settings that determine which data sources are used
-  # Change them for your own data / institution
+
   metadata_institution_name: "VU"
-  metadata_institution_save_name: metadata_institution_name
   metadata_institution_BRIN: "21PL"
 
-  data_1cho_starting_cohorts_rel_file_path: "2023-09-19-15-32-12_ODW204 - VUanalytics EOI Cohorten.zip"
-  data_1cho_enrollments_rel_file_path: "2023-03-21-16-43-54_ODW205 - VUanalytics 1CHO Inschrijving.zip"
-  data_1cho_starting_cohorts_file_path: !expr file.path("data/00_raw", year, data_1cho_starting_cohorts_rel_file_path)
-  data_1cho_enrollments_file_path: !expr file.path("data/00_raw", year, data_1cho_enrollments_rel_file_path)
 
+  data_1cho_enrollments_file_name: "2023-03-21-16-43-54_ODW205 - VUanalytics 1CHO Inschrijving.zip"
+  data_1cho_enrollments_file_path: !expr file.path("data/00_raw", year, data_1cho_enrollments_file_name)
+
+  # data_1cho_starting_cohorts_rel_file_path: "2023-09-19-15-32-12_ODW204 - VUanalytics EOI Cohorten.zip"
+  # data_1cho_starting_cohorts_file_path: !expr file.path("data/00_raw", year, data_1cho_starting_cohorts_rel_file_path)
+
+  # fix_duplicated_enrollments: TRUE # At the VU sometimes a student has multiple enrollments in one year. This setting combines those enrollments
+  # filter_only_own_students: TRUE
+  # filter_only_gov_funded_programmes: TRUE
+
+  # Add additional manipulation configs to this vector
+  # data_manipulation_config: !expr c(fix_duplicated_enrollments, filter_only_own_students, filter_only_gov_funded_programmes)
